--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,10 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".presentation.chat.ChatActivity"
+            android:name=".HomeActivity"
+            android:exported="false" />
+        <activity
+            android:name=".presentation.MainActivity"
             android:exported="true"
             android:screenOrientation="portrait">
             <intent-filter>
@@ -25,9 +28,10 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".presentation.MainActivity"
-            android:exported="false"
-            android:screenOrientation="portrait" />
+            android:name=".presentation.chat.ChatActivity"
+            android:exported="true"
+            android:screenOrientation="portrait" >
+        </activity>
     </application>
 
 </manifest>
