--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".ReviewActivity"
+            android:name=".presentation.review.ReviewActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
         <activity
