--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
         </activity>
         <activity
             android:name=".presentation.chat.ChatActivity"
-            android:exported="true"
+            android:exported="false"
             android:screenOrientation="portrait"></activity>
     </application>
 
