{#4} [feat] userid 리사이클러뷰 서버통신

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,11 +14,9 @@
         android:theme="@style/Theme.Carrot_AOS"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
+
         <activity
-            android:name=".HomeActivity"
-            android:exported="false" />
-        <activity
-            android:name=".presentation.MainActivity"
+            android:name=".presentation.sale.SaleActivity"
             android:exported="true"
             android:screenOrientation="portrait">
             <intent-filter>
