--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,7 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        buildConfigField "String", "AUTH_BASE_URL", properties["auth.base.url"]
     }
 
     buildTypes {
@@ -42,6 +43,8 @@ android {
         viewBinding true
         dataBinding true
     }
+
+
 }
 
 dependencies {
