--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,11 +26,11 @@
         </activity>
         <activity
             android:name=".presentation.sale.SaleActivity"
-            android:exported="false"
+            android:exported="true"
             android:screenOrientation="portrait" />
         <activity
             android:name=".presentation.review.ReviewActivity"
-            android:exported="false"
+            android:exported="true"
             android:screenOrientation="portrait" />
         <activity
             android:name=".presentation.MainActivity"
@@ -38,7 +38,7 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".presentation.chat.ChatActivity"
-            android:exported="false"
+            android:exported="true"
             android:screenOrientation="portrait" />
     </application>
 
